--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,10 +5,14 @@
     <link rel="icon" type="image/png" href="/images/logos/communiti_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Feedback Cubbies</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Corben:wght@400;700&family=Kode+Mono:wght@400..700&display=swap"
+      rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
